--- a/examples/webgl_geometry_align_tangents.html
+++ b/examples/webgl_geometry_align_tangents.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>three.js webgl - helpers</title>
+		<title>three.js webgl - tangent neighbor averaging - combing the hairy ball</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link type="text/css" rel="stylesheet" href="main.css">
 	</head>
 	<body>
 		<div id="info">
-			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - helpers
+			<a href="https://threejs.org" target="_blank" rel="noopener">three.js</a> - tangent neighbor averaging - combing the hairy ball
 		</div>
 
 		<!-- Import maps polyfill -->
