Add a link to Bourke Bourke

--- a/examples/webgl_materials_reprojection.html
+++ b/examples/webgl_materials_reprojection.html
@@ -15,7 +15,7 @@
 
 		<div id="info">
 			<a href="https://threejs.org" target="_blank" rel="noopener">three.js webgl</a> - materials - reprojection<br/>
-			Performing CAVE Reprojection on a Curved Display Surface
+			Rendering CAVE Imagery to <a href="http://paulbourke.net/dome/mirrordome/" target="_blank" rel="noopener">a Paul Bourke-style Mirror Dome</a>
 		</div>
 
 		<!-- Import maps polyfill -->
