--- a/examples/webgl_postprocessing_ssilvb.html
+++ b/examples/webgl_postprocessing_ssilvb.html
@@ -138,7 +138,7 @@
 					scale: 1.,
 					samples: 16,
 					screenSpaceRadius: false,
-					useCorrectNormals: false
+					useCorrectNormals: true
 				};
 				const pdParameters = {
 					lumaPhi: 10.,
