--- a/examples/webgl_postprocessing_ssilvb.html
+++ b/examples/webgl_postprocessing_ssilvb.html
@@ -132,9 +132,9 @@
 				} );
 
 				const aoParameters = {
-					radius: 0.1,
+					radius: 1.0,
 					distanceExponent: 1.,
-					thickness: 1.,
+					thickness: 0.6,
 					scale: 1.,
 					samples: 16,
 					screenSpaceRadius: false,
@@ -155,7 +155,7 @@
 				gui.add( aoParameters, 'useCorrectNormals' ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) )
 				gui.add( aoParameters, 'radius' ).min( 0.01 ).max( 1 ).step( 0.01 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
 				gui.add( aoParameters, 'distanceExponent' ).min( 1 ).max( 4 ).step( 0.01 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
-				gui.add( aoParameters, 'thickness' ).min( 0.01 ).max( 0.3 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
+				gui.add( aoParameters, 'thickness' ).min( 0.01 ).max( 1.0 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
 				gui.add( aoParameters, 'scale' ).min( 0.01 ).max( 2.0 ).step( 0.01 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
 				gui.add( aoParameters, 'samples' ).min( 2 ).max( 32 ).step( 1 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
 				gui.add( aoParameters, 'screenSpaceRadius' ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
