--- a/examples/webgl_postprocessing_ssilvb.html
+++ b/examples/webgl_postprocessing_ssilvb.html
@@ -136,7 +136,8 @@
 					thickness: 1.0,
 					scale: 1.,
 					aosamples: 32,
-					slices: 2
+					slices: 2,
+					distanceExponent: 1.7
 				};
 				const pdParameters = {
 					lumaPhi: 10.,
@@ -151,10 +152,11 @@
 				ssilvbPass.updatePdMaterial( pdParameters );
 				gui.add( ssilvbPass, 'blendIntensity' ).min( 0 ).max( 1 ).step( 0.01 );
 				gui.add( aoParameters, 'slices' ).min( 1 ).max( 8 ).step( 1 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
+				gui.add( aoParameters, 'aosamples' ).min( 2 ).max( 64 ).step( 1 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
+				gui.add( aoParameters, 'scale' ).min( 0.01 ).max( 5.0 ).step( 0.01 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
+				gui.add( aoParameters, 'distanceExponent' ).min( 1.0 ).max( 3.0 ).step( 0.01 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
 				gui.add( aoParameters, 'radius' ).min( 0.01 ).max( 25 ).step( 0.01 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
 				gui.add( aoParameters, 'thickness' ).min( 0.01 ).max( 1.0 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
-				gui.add( aoParameters, 'scale' ).min( 0.01 ).max( 5.0 ).step( 0.01 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
-				gui.add( aoParameters, 'aosamples' ).min( 2 ).max( 64 ).step( 1 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
 				gui.add( pdParameters, 'lumaPhi' ).min( 0 ).max( 20 ).step( 0.01 ).onChange( () => ssilvbPass.updatePdMaterial( pdParameters ) );
 				gui.add( pdParameters, 'depthPhi' ).min( 0.01 ).max( 20 ).step( 0.01 ).onChange( () => ssilvbPass.updatePdMaterial( pdParameters ) );
 				gui.add( pdParameters, 'normalPhi' ).min( 0.01 ).max( 20 ).step( 0.01 ).onChange( () => ssilvbPass.updatePdMaterial( pdParameters ) );
