--- a/examples/webgpu_postprocessing_ao.html
+++ b/examples/webgpu_postprocessing_ao.html
@@ -39,6 +39,7 @@
 
 			const params = {
 				output: "AO Only + Denoise",
+				sliceCount: 4,
 				distanceExponent: 1,
 				distanceFallOff: 1,
 				radius: 0.25,
@@ -151,6 +152,7 @@
 
 				} );
 
+				gui.add( params, 'sliceCount' ).min( 1 ).max( 8 ).step( 1 ).onChange( updateParameters );
 				gui.add( params, 'distanceExponent' ).min( 1 ).max( 4 ).onChange( updateParameters );
 				gui.add( params, 'distanceFallOff' ).min( 0.01 ).max( 1 ).onChange( updateParameters );
 				gui.add( params, 'radius' ).min( 0.01 ).max( 5 ).onChange( updateParameters );
@@ -174,11 +176,14 @@
 				aoPass.radius.value = params.radius;
 				aoPass.scale.value = params.scale;
 				aoPass.thickness.value = params.thickness;
+				aoPass.sliceCount.value = params.sliceCount;
 
 				denoisePass.radius.value = params.denoiseRadius;
 				denoisePass.lumaPhi.value = params.lumaPhi;
 				denoisePass.depthPhi.value = params.depthPhi;
 				denoisePass.normalPhi.value = params.normalPhi;
+
+				
 
 			}
 
