--- a/examples/webgl_postprocessing_ssilvb.html
+++ b/examples/webgl_postprocessing_ssilvb.html
@@ -132,6 +132,7 @@
 				} );
 
 				const aoParameters = {
+					slices: 4,
 					radius: 1.0,
 					distanceExponent: 1.,
 					thickness: 0.6,
@@ -153,11 +154,12 @@
 				ssilvbPass.updatePdMaterial( pdParameters );
 				gui.add( ssilvbPass, 'blendIntensity' ).min( 0 ).max( 1 ).step( 0.01 );
 				gui.add( aoParameters, 'useCorrectNormals' ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) )
-				gui.add( aoParameters, 'radius' ).min( 0.01 ).max( 1 ).step( 0.01 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
+				gui.add( aoParameters, 'slices' ).min( 2 ).max( 8 ).step( 1 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
+				gui.add( aoParameters, 'samples' ).min( 2 ).max( 32 ).step( 1 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
+				gui.add( aoParameters, 'radius' ).min( 0.01 ).max( 3 ).step( 0.01 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
 				gui.add( aoParameters, 'distanceExponent' ).min( 1 ).max( 4 ).step( 0.01 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
 				gui.add( aoParameters, 'thickness' ).min( 0.01 ).max( 1.0 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
-				gui.add( aoParameters, 'scale' ).min( 0.01 ).max( 2.0 ).step( 0.01 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
-				gui.add( aoParameters, 'samples' ).min( 2 ).max( 32 ).step( 1 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
+				gui.add( aoParameters, 'scale' ).min( 0.01 ).max( 5.0 ).step( 0.01 ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
 				gui.add( aoParameters, 'screenSpaceRadius' ).onChange( () => ssilvbPass.updateSSILVBMaterial( aoParameters ) );
 				gui.add( pdParameters, 'lumaPhi' ).min( 0 ).max( 20 ).step( 0.01 ).onChange( () => ssilvbPass.updatePdMaterial( pdParameters ) );
 				gui.add( pdParameters, 'depthPhi' ).min( 0.01 ).max( 20 ).step( 0.01 ).onChange( () => ssilvbPass.updatePdMaterial( pdParameters ) );
